# sonar

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_and_upload_docker.sh  build_aphrodite_ppc64le.sh  build_rust.sh  build_wheel.sh  pyproject.toml  setup.py
.sync/: vllm-sha
aphrodite/: _aiter_ops.py  _custom_ops.py  _xpu_ops.py  collect_env.py  connections.py  env_override.py  envs.py  exceptions.py  forward_context.py  logger.py  logits_process.py  logprobs.py  model_inspection.py  outputs.py  pooling_params.py  sampling_params.py  scalar_type.py  sequence.py  tasks.py
aphrodite/assets/: base.py  image.py  video.py
aphrodite/benchmarks/: latency.py  mm_processor.py  plot.py  serve.py  startup.py  throughput.py
aphrodite/compilation/: backends.py  base_static_graph.py  breakable_cudagraph.py  caching.py  codegen.py  compiler_interface.py  cuda_graph.py  decorators.py  monitor.py  partition_rules.py  piecewise_backend.py  wrapper.py
aphrodite/config/: __init__.py  aphrodite.py  attention.py  cache.py  compilation.py  device.py  diffusion.py  ec_transfer.py  kernel.py  kv_transfer.py  (+19 more)
benchmarks/: backend_request_func.py
cmake/: cpu_extension.cmake  hipify.py  utils.cmake
csrc/: cuda_compat.h  cumem_allocator.cpp  custom_all_reduce.cuh  dispatch_utils.h  fork_torch_bindings.cpp  minimax_reduce_rms_kernel.h  qutlass_registration.cpp  type_convert.cuh
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.ppc64le  Dockerfile.rocm  Dockerfile.xpu  export_wheels.sh  versions.json
requirements/: cpu-build.txt  cuda.txt  xpu.txt
rust/: AGENTS.md  Cargo.toml  README.md
rust/src/mock-engine/: Cargo.toml  README.md
rust/src/mock-engine/src/: engine.rs  io.rs  lib.rs  main.rs  tests.rs
rust/src/server/: Cargo.toml  build.rs
rust/src/server/examples/: README.md  external_engine_openai_qwen.rs
rust/src/server/src/: config.rs  error.rs  lib.rs  listener.rs  lora.rs  routes.rs  runtime.rs  server_info.rs  state.rs  tls_tests.rs  utils.rs
rust/src/server/src/grpc/: convert.rs  mod.rs  tests.rs
rust/src/server/src/middleware/: metrics.rs  offload.rs  request_id.rs
rust/src/server/src/routes/: cache.rs  http_client_tests.rs  lora.rs  metrics.rs  pause.rs  sleep.rs  tests.rs  tokenize.rs  version.rs
rust/src/server/src/routes/inference/: generate.rs
rust/src/server/src/routes/inference/generate/: convert.rs  types.rs
rust/src/server/src/routes/openai/: chat_completions.rs  completions.rs  models.rs
rust/src/server/src/routes/openai/chat_completions/: convert.rs  types.rs  validate.rs
rust/src/server/src/routes/openai/completions/: convert.rs  types.rs  validate.rs
rust/src/server/src/routes/openai/utils/: logprobs.rs  structured_outputs.rs  types.rs
rust/src/server/src/routes/tokenize/: types.rs
rust/src/text/: Cargo.toml
rust/src/text/src/: error.rs  lib.rs  lower.rs  request.rs
rust/src/text/src/backend/: mod.rs
rust/src/text/src/backend/hf/: mod.rs  model_files.rs
rust/src/text/src/lower/: logprobs.rs  token_ids.rs
rust/src/text/src/output/: decoded.rs  logprobs.rs  mod.rs
scripts/: benchmark_helion_kernels.py
tests/: ci_envs.py  conftest.py  test_access_log_filter.py  test_aphrodite_port.py  test_attention_backend_registry.py  test_config.py  test_embedded_commit.py  test_envs.py  test_force_first_config.py  test_fxgraphcache_pickle_patch.py  test_inputs.py  test_jit_monitor.py  test_logger.py  test_logprobs.py  test_outputs.py  test_pooling_params.py  test_ray_env.py  test_ray_env_utils.py  test_regression.py  test_sampling_params.py  test_scalartype.py  test_sequence.py  test_triton_utils.py  test_version.py  test_zen_cpu_platform_detection.py  utils.py
tools/: build_rust.py  generate_cmake_presets.py  install_deepgemm.sh
(+3500 files in other folders)
