[package]
name = "aphrodite-text"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
asynk-strim-attr.workspace = true
easy-ext.workspace = true
enum-as-inner.workspace = true
futures.workspace = true
hf-hub.workspace = true
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
thiserror-ext.workspace = true
tracing.workspace = true
trait-set.workspace = true
aphrodite-engine-core-client.workspace = true
aphrodite-llm.workspace = true
aphrodite-tokenizer.workspace = true

[dev-dependencies]
expect-test.workspace = true
futures.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio.workspace = true
aphrodite-llm = { workspace = true, features = ["test-util"] }
aphrodite-tokenizer = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
